[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Minigames/ScratchTicket/scratch_spots.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/accid___.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/star.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 11 )

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.312236, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.797468, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( 0.4, -1, 0 )
spread = 82.38
gravity = Vector3( 0, 98, 0 )
initial_velocity = 209.36
initial_velocity_random = 0.55
angular_velocity = 210.67
angular_velocity_random = 0.91
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )

[node name="scratch_spots" type="Node2D" groups=["scratch_spot"]]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -3 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -25.0
margin_top = -43.0
margin_right = 25.0
margin_bottom = -3.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0196078, 0.0431373, 0.0823529, 1 )
text = "9"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = -108.0
margin_top = -24.0
margin_right = 108.0
margin_bottom = 16.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0196078, 0.0431373, 0.0823529, 1 )
custom_fonts/font = SubResource( 2 )
text = "NINE"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = -95.0
margin_top = -6.0
margin_right = 95.0
margin_bottom = 34.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.0196078, 0.0431373, 0.0823529, 1 )
text = "9"
align = 1
valign = 1

[node name="stars" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 9 )
texture = ExtResource( 4 )

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
